      sometimes trace back; in these cases, Conary will now print a
      more useful error message. (CNY-3125)
    * Displaying the output from verify spent a significant amount of time
      querying repositories for information which was available in the local
      database. All data accesses for verify are now satisfied locally
      for a significant (10x) speedup in performance).

Changes in 2.0.40:
  o Bug Fixes:
    * keepRequired now recognizes that local troves may have had files
      removed, preventing file conflicts with incoming troves
    * Fixed formatting error in cvc explain that caused policy actions to be
      listed twice. (CNY-3107)
    * Conary ignores configuration file errors for certain local
      operations including conary query, rblist, and showcs. (CNY-3111)
    * Python flags on a Requires dep now use exactly the flags on the 
      corresponding Provides, rather than being trimmed to match flags on
      python:runtime's Requires deps. (CNY-3030)
    * Disallow characters '"\\()[] in labels

  o New Features:
    * Added getLabelsForHost call, and bumped server protocol to 66. (CNY-2771)
    * Added getFilesFromTrove call, and bumped server protocol to 67. (CNY-3100)
    * Repositories now check the database to see which files already exist
      instead of looking in the filesystem for a noticeable speedup in commit
      time for systems with NFS based data stores.
    * In a GroupRecipe, r.remove now takes a use flag to determine if a trove
      should be removed. This matches the behavior of r.add*. (CNY-3115)
    * Added types to allow creation of sockets and named pipes via
      conaryclient/newtrove.py code paths
    * The "migrate" command now accepts the "--from-file" option (CNY-3114)
    * Standalone and apache servers now pull in REST api from the crest
      project if the code is available. Note that restlib and xobj are
      required for the crest implementation, and that the "baseUri" must